<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="calvin.sjsu.cs175.memorygame.RulesFragment"
    android:id="@+id/rules_window">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rules_header"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule1"
        android:id="@+id/ruleOne"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule2"
        android:id="@+id/ruleTwo"
        android:layout_below="@+id/ruleOne"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule3"
        android:id="@+id/ruleThree"
        android:layout_below="@+id/ruleTwo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule4"
        android:id="@+id/ruleFour"
        android:layout_below="@+id/ruleThree"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rule5"
        android:id="@+id/ruleFive"
        android:layout_below="@+id/ruleFour"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="X"
        android:id="@+id/exitBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
